# everword-backend

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: lib.rs  main.rs
src/dict/providers/cambridge/: parser.rs  statics.rs
src/routes/: config.rs  mod.rs
src/routes/dict/: cambridge.rs  config.rs  mod.rs
src/routes/providers/: config.rs  discover.rs  mod.rs  provider.rs
src/scraper/: mod.rs  traits.rs
src/scraper/providers/: cambridge.rs  mod.rs
src/scraper/providers/cambridge/: mod.rs  parser.rs  statics.rs
src/server/: error.rs  logging.rs
tests/: cambridge.rs
