[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
everword-lib = { path = "../everword-lib" }

actix-web = "4.4.0"
anyhow = "1.0.76"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }